# adsb-dashboard

./: .gitignore  README.md  docs_coverage_fix_plan.md
backend/: .env.example  acas.py  aircraft.py  aircraft_state.py  beast_client.py  benchmark.py  build_pymodes_cython.sh  config.py  coverage.py  db.py  debug.py  enrichment.py  fleet.py  health.py  hires_buffer.py  history.py  main.py  mlat.py  notifications.py  notify_settings.py  position_quality.py  pyproject.toml  run_benchmark.py  squawks.py  status.py  track_store.py  tracks.py  utils.py
backend/tests/: test_beast_client.py  test_config.py  test_db.py  test_enrichment.py  test_position_altitude_filtering.py
docs/superpowers/plans/: 2026-03-18-cpr-altitude-filtering.md
docs/superpowers/specs/: 2026-03-18-cpr-altitude-filtering-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.module.css  index.css
frontend/src/components/: AircraftDetailPanel.jsx  AircraftDetailPanel.module.css  AircraftTable.jsx  AircraftTable.module.css  AltHeatmap.jsx  AltHeatmap.module.css  CalendarHeatmap.jsx  CalendarHeatmap.module.css  DFHeatmap.jsx  HourlyHeatmap.jsx  HourlyHeatmap.module.css  MessageRateChart.jsx  MessageRateChart.module.css  MlatScorecard.jsx  MlatScorecard.module.css  NotableSightings.jsx  NotableSightings.module.css  StatsBar.jsx  StatsBar.module.css  TrendChart.jsx  TrendChart.module.css
frontend/src/pages/: BenchmarkPanel.jsx  CoveragePage.jsx  CoveragePage.module.css  EventsPage.jsx  EventsPage.module.css  (+19 more)
tools/: fetch_airports.py  fetch_coastline.py
(+2 files in other folders)
