[project]
name = "adsb-dashboard"
version = "0.1.0"
description = "ADS-B receiver monitoring dashboard backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "orjson>=3.9",
    "pymodes==2.9",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
